--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "Columbia University"
   pubmed           : 
   googlescholar    : 
-  email            : "wjb1085546337@gmail.com"
+  email            : "jw3976@columbia.edu"
   researchgate     : "https://www.researchgate.net/profile/Jingbo-Wan-2"
   uri              :
   bitbucket        :
