--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Jingbo Wan"
   avatar           : "profile-pic-min.png"
-  bio              : "Math PhD student"
-  location         : "Manhattan, New York"
-  employer         : "Columbia University"
+  bio              : "CNRS Postdoctoral Researcher in Mathematics"
+  location         : "Paris, France"
+  employer         : "Sorbonne University (LJLL, CNRS)"
   pubmed           : 
   googlescholar    : 
-  email            : "jw3976@columbia.edu"
+  email            : "jingbo.wan@sorbonne-universite.fr"
   researchgate     : "https://www.researchgate.net/profile/Jingbo-Wan-2"
   uri              :
   bitbucket        :
