--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
  #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV___PD.pdf
     
  # - title: "Guide"
  #   url: /markdown/
