--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,8 @@ author:
   employer         : "Sorbonne University (LJLL, CNRS)"
   pubmed           : 
   googlescholar    : 
-  email:
-  - "jingbo.wan@sorbonne-universite.fr"
-  - "jingbo.wan@cnrs.fr"
+  email(sorbonne)  : "jingbo.wan@sorbonne-universite.fr"
+  email(cnrs)      : "jingbo.wan@sorbonne-universite.fr"
   researchgate     : "https://www.researchgate.net/profile/Jingbo-Wan-2"
   uri              :
   bitbucket        :
