--- a/_config.yml
+++ b/_config.yml
@@ -80,43 +80,28 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jingbo Wan"
-  avatar           : "profile-pic-min.png"
-  bio              : "CNRS Postdoctoral Researcher in Mathematics"
-  location         : "Paris, France"
-  employer         : "Sorbonne University (LJLL, CNRS)"
-  pubmed           : 
-  googlescholar    : 
-  email: >
-  <a href="mailto:jingbo.wan@cnrs.fr">jingbo.wan@cnrs.fr</a><br>
-  <a href="mailto:jingbo.wan@sorbonne-universite.fr">jingbo.wan@sorbonne-universite.fr</a>
-  researchgate     : "https://www.researchgate.net/profile/Jingbo-Wan-2"
-  uri              :
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         :
-  foursquare       :
-  github           : "JingboWanMath"
-  google_plus      :
-  keybase          :
-  instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         :
-  orcid            : 
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : 
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
+  name      : "Jingbo Wan"
+  avatar    : "profile-pic-min.png"
+  bio       : "CNRS Postdoctoral Researcher in Mathematics"
+  location  : "Paris, France"
+  employer  : "Sorbonne University (LJLL, CNRS)"
+  pubmed    :
+  googlescholar :
+  email     : "jingbo.wan@cnrs.fr"
+
+  links:
+    - label: "Email (CNRS)"
+      icon : "fas fa-fw fa-envelope"
+      url  : "mailto:jingbo.wan@cnrs.fr"
+    - label: "Email (Sorbonne)"
+      icon : "fas fa-fw fa-envelope"
+      url  : "mailto:jingbo.wan@sorbonne-universite.fr"
+    - label: "ResearchGate"
+      icon : "fab fa-fw fa-researchgate"
+      url  : "https://www.researchgate.net/profile/Jingbo-Wan-2"
+    - label: "GitHub"
+      icon : "fab fa-fw fa-github"
+      url  : "https://github.com/JingboWanMath"
 
 
 # Reading Files
